Moved the labels to the left of the staff, for a more appealing gap in the middle. Adjusted label spacing with flex box. Also applied "box-sizing: border-box;" to all elements to solve flexbox horizontal overflow. Otherwise, min-width: 100% would include padding and margin, forcing items to overflow.

--- a/webapp.css
+++ b/webapp.css
@@ -1,6 +1,13 @@
 /* =========================
    Global Styles
    ========================= */
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
     background: url(Autoharp\ image.jpg);
     transform: none;
@@ -48,6 +55,45 @@ body {
     margin-bottom: 20px;
 }
 
+
+/* =========================
+   Music Staff Styles
+   ========================= */
+
+.music-staff {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    /* background-color: rgba(255, 255, 255, 0.5); */
+    border: 1px solid #ccc;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+
+/* ==========================
+   Label Styles
+   ========================= */
+
+   .labels{
+    display: flex;
+    border: 1px solid black;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-bottom: 0px;
+   }
+
+   .label{
+    text-align: center;
+    padding: 5px;
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid black;
+    margin-bottom: 10px;
+   }
+
 /* =========================
    Bracketed Section Styles
    ========================= */
@@ -55,7 +101,7 @@ body {
     position: relative;
     padding-left: 5%;
     min-height: 40px;
-    min-width: 100%;
+    width: 100%;
     /* background-image:
         linear-gradient(to bottom, black 2px, transparent 2px, transparent 8px),
         linear-gradient(to bottom, black 2px, transparent 2px, transparent 16px),
@@ -120,8 +166,8 @@ body {
     /* border: 1px solid #ccc; */
     padding: 10px;
     min-height: 18vh;
-    min-width: 100px;
-    max-width: 100vw;;
+    min-width: auto;
+    max-width: auto;
 background-image:
     linear-gradient(to bottom, black 2px, transparent 2px),
     linear-gradient(to bottom, black 2px, transparent 2px),
@@ -143,6 +189,10 @@ background-position: left 0%, left 25%, left 50%, left 75%, left 100%, left top,
 .chordGroup > .dragging {
     /* background-image: url('data:image/svg+xml;utf8,...'); */
     cursor: grabbing;
+}
+
+.staffSpacer{
+    height: 10vh;
 }
 
 /* =========================
